# aria_new

./: .gitignore  DATE_UPDATE_REPORT.md  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
app/: build.gradle  settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/res/values-zh/: strings.xml
backend/: Dockerfile  package.json
backend/src/: index.js
backend/src/config/: database.js
backend/src/controllers/: auth.controller.js  chat.controller.js  solana.controller.js  token.controller.js  user.controller.js
backend/src/middleware/: auth.middleware.js  error.middleware.js
backend/src/routes/: auth.routes.js  chat.routes.js  solana.routes.js  token.routes.js  user.routes.js
backend/src/utils/: logger.js
contract/: Cargo.toml  README.md
contract/src/: lib.rs
docs/: android_architecture.md  index.md  installation.md  security_audit.md  tokenomics.md  whitepaper.md
docs/en/: security_audit.md  tokenomics.md
frontend/: Dockerfile  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Footer.js  Header.js
frontend/src/pages/: ChatPage.js  DashboardPage.js  HomePage.js  SettingsPage.js
scripts/: deploy_token.js  pump_fun_listing.js  test_token_devnet.js
scripts/temp/: pump_fun_listing_backup.js
server/: package.json
(+44 files in other folders)
