[package]
name = "aria-token"
version = "0.1.0"
edition = "2021"
description = "ARIA Token - SPL Token for AI Personal Assistant"
authors = ["ARIA Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
thiserror = "1.0.38"
borsh = "0.10.3"

[lib]
crate-type = ["cdylib", "lib"] 